--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="profile__buttons">
-                <a download="" href="assets/pdf/CV_Trenado.pdf" class="button">
+                <a download="" href="assets/pdf/Franco Trenado CV ENGLISH.pdf" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
@@ -143,7 +143,7 @@
                             <div>
                                 <span class="projects__subtitle">Design</span>
                                 <h3 class="projects__title">Music app design</h3>
-                                <a target="_blank" href="https://github.com/FranSamaa/Golden-Ticket.git"
+                                <a target="_blank" href="https://fransamaa.github.io/Golden-Ticket-main/index.html"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
