Edit cv and repo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="profile__buttons">
-                <a download="" href="assets/pdf/Franco Trenado CV ENGLISH.pdf" class="button">
+                <a download="" href="assets/pdf/Franco Trenado CV ENGLISH (1).pdf" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
@@ -111,7 +111,7 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Ecomerce</h3>
-                                <a target="_blank" href="https://github.com/FranSamaa/EcomerceProyectoCoder.git"
+                                <a target="_blank" href="https://fransamaa.github.io/Otaku-Shop-Franco-Trenado/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -197,7 +197,15 @@
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
-                                        <span class="skills__level">Basic</span>
+                                        <span class="skills__level">Intermediate</span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">React</h3>
+                                        <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
                             </div>
@@ -220,6 +228,22 @@
                                         <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Sass</h3>
+                                        <span class="skills__level">Intermediate</span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <i class="ri-checkbox-circle-line"></i>
+
+                                    <div>
+                                        <h3 class="skills__name">Node-js</h3>
+                                        <span class="skills__level">Intermediate</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -235,7 +259,7 @@
 
                                     <div>
                                         <h3 class="skills__name">Python</h3>
-                                        <span class="skills__level">Advanced</span>
+                                        <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
 
@@ -243,8 +267,8 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">MySQL</h3>
-                                        <span class="skills__level">Basic</span>
+                                        <h3 class="skills__name">Java</h3>
+                                        <span class="skills__level">Intermediate</span>
                                     </div>
                                 </div>
                             </div>
