--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="profile__buttons">
-                <a download="" href="/assets/pdf/CV -ENGLISH-FRANCO TRENADO.pdf" class="button">
+                <a download="" href="assets/pdf/CV -ENGLISH-FRANCO TRENADO.pdf" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
